hphp/test/zend/good/ext/reflection/tests/traits002.php
<?php

abstract class foo {
}

trait bar {
	
}

reflectionclass::export('foo');
reflectionclass::export('bar');

?>
